# pdf-censor

./: README.md  hook-tkinterdnd2.py  mkdocs.yml  pdf_censor.py  pyproject.toml  requirements.txt
.github/workflows/: action.yml
docs/: index.md
docs/api/: remover.md
pdf_censor/: __init__.py  gui.py  gui_classes.py  remover.py
pdf_censor/gui_assets/: logo.icns
pydf_text_remover/: __init__.py  gui.py  gui_classes.py  remover.py  text_remover.py  utils.py
tests/: test_remover.py
