[tool.poetry]
name = "pydf-text-remover"
version = "0.1.0"
description = ""
authors = ["pho-souza <pedroka196@gmail.com>"]
readme = "README.md"
packages = [{include = "pydf_text_remover"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.4.6"
mkdocstrings-python = "^1.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_lenght = 79

[tool.taskipy.tasks]
lint_blue = "blue --check --diff ."
lint_isort = "isort --check --diff ."
pre_test = "task lint_blue && task lint_isort"
docs = "mkdocs serve"
pytest = "pytest -s -x --cov=pydf_text_remover -vv"
post_test = "coverage html"