[tool.poetry]
name = "pdf-censor"
version = "0.0.4"
description = ""
authors = ["pho-souza <pedroka196@gmail.com>"]
readme = "README.md"
packages = [{include = "pdf_censor"}]

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.23.5"
Cython = "^3.0.4"
# tkinter = "^0.1.0"
tkinterdnd2 = "^0.3.0"
# pysimplegui = "^4.60.5"
pyinstaller = "^6.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"


# Scripts personalizados
[tool.poetry.scripts]
open_gui = "pdf_censor.gui:main"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.4.6"
mkdocstrings-python = "^1.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79
skip = [".gitignore"]

[tool.coverage.report]
show_missing=true

[tool.taskipy.tasks]
lint_blue = "blue --check --diff ."
lint_isort = "isort --check --diff ."
pre_test = "task lint_blue && task lint_isort"
docs = "mkdocs serve"
test = "pytest -s -x --cov=pdf_censor -vv"
post_test = "coverage html"
py_installer = 'pyinstaller --noconfirm --noupx --windowed --name pdf_text_remover --additional-hooks-dir "."  --add-data "pdf_censor/gui_assets/*:gui_assets" --icon "pdf_censor/gui_assets/logo.ico" ./pdf_censor/gui.py'
